[package]
name = "blog_os"
version = "0.1.0"
edition = "2024"

[package.metadata.bootimage]
test-args = []
test-success-exit-code = 33

[[bin]]
name = "blog_os"
test = true
bench = false

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.6.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]